<?xml version="1.0"?>
<package format="2">
  <name>urdf_test</name>
  <version>1.0.0</version>
  <description>The urdf_test package</description>

  <maintainer email="david.fernandez@pal-robotics.com">davidfernandez</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>xacro</depend>
  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
